# EchoShaderLab

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
Assets/Editor/Scripts/: EchoShaderLabEditor.cs
Assets/Resources/: MenuConfig.xml
Assets/Resources/Materials/: AlphaBlendMat.mat  AlphaBlendZWriteMat.mat  AlphaTestMat.mat  BlinnPhoneMat.mat  DiffusePixelLevelMat.mat  DiffuseVertexLevelMat.mat  HalfLambertMat.mat  HighlightMat.mat  NormalMapTangentSpaceMat.mat  RampTextureMat.mat  SingleTextureMat.mat  SpecularPixelLevelMat.mat  SpecularVertexLevelMat.mat
Assets/Resources/Perfabs/: BlinnPhone.prefab  BtnPerfab.prefab  DiffusePixelLevel.prefab  DiffuseVertlLevel.prefab  HalfLambert.prefab  Knot.prefab  SpecularPixelLevel.prefab  SpecularVertexLevel.prefab
Assets/Scenes/: AlphaBlendZWrite.unity  AlphaTestAndAlphaBlend.unity  SampleScene.unity  ShaderPlayground.unity  ShaderStudioScene.unity
Assets/Scenes/SampleScene/: LightingData.asset
Assets/Scripts/: GeneralTabActions.cs  RibbonTabController.cs
Assets/Scripts/Commands/: EditCommands.cs  IMenuCommand.cs
Assets/Scripts/Controller/: PreviewController.cs
Assets/Scripts/Core/: MenuCommandRegistry.cs  RenderTexturePool.cs
Assets/Scripts/UI/: MenuLoader.cs  PreviewPanel.cs  UIBuilder.cs
Assets/Shaders/: AlphaBlend.shader  AlphaBlendZWrite.shader  AlphaTest.shader  BlinnPhone.shader  DiffusePixelLevel.shader  DiffuseVertexLevel.shader  HalfLambert.shader  NormalMapTangentSpace.shader  OutlineHighlight.shader  RampTexture.shader  SingleTexture.shader  SpecularPixelLevel.shader  SpecularVertexLevel.shader
Assets/StreamingAssets/: MenuConfig.xml
Assets/TextMesh Pro/Resources/Fonts & Materials/: VarelaRound-Regular SDF.asset  msyh SDF.asset  msyh.asset  segoepr SDF.asset  segoepr.asset
Assets/Texture/: PreviewRT.renderTexture
ProjectSettings/: ProjectSettings.asset  TagManager.asset
ShaderLab/: CMakeLists.txt
ShaderLab/src/: main.cpp  pch.h
ShaderLab/src/GUI/: ConsoleDockWgt.cpp  ConsoleDockWgt.h  MainWindow.cpp  MainWindow.h  RenderPreviewWgt.cpp  RenderPreviewWgt.h
